Clean up java lint issues for deprecated and unchecked.